[package]
name = "stomp-rs"
version = "0.0.1"
authors = ["Albert <albert@myndocs.nl>"]
edition = "2018"

exclude = [
  ".idea/",
  "**.iml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }