[package]
name = "stomp-rs"
version = "0.0.1"
authors = ["Albert <albert@myndocs.nl>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adhesivee/stomp-rs"
description = "STOMP client"

exclude = [
  ".idea/",
  "**.iml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }