[package]
name = "stomp-rs"
version = "0.0.7"
authors = ["Albert <albert@myndocs.nl>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adhesivee/stomp-rs"
description = "STOMP client"
keywords = [
  "stomp",
  "stomp-client",
  "tokio"
]

exclude = [
  ".idea/",
  "**.iml"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
async-trait = "0.1"

[dev-dependencies]
simple_logger = "1.13"